--- a/spacex-module-architecture/gradle/libs.versions.toml
+++ b/spacex-module-architecture/gradle/libs.versions.toml
@@ -36,7 +36,10 @@ androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+androidx-compose-material-iconsExtended = { group = "androidx.compose.material", name = "material-icons-extended" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-compose-material3-navigationSuite = { group = "androidx.compose.material3", name = "material3-adaptive-navigation-suite" }
+androidx-compose-ui-util = { group = "androidx.compose.ui", name = "ui-util" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 # Navigation 3
@@ -57,7 +60,7 @@ jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrai
 # Plugins defined by this project
 spacex-android-application = { id = "spacex.android.application" }
 spacex-android-application-compose = { id = "spacex.android.application.compose" }
-spacex-android-feature = { id = "nowinandroid.android.feature" }
+spacex-android-feature = { id = "spacex.android.feature" }
 spacex-android-library = { id = "spacex.android.library" }
 spacex-android-library-compose = { id = "spacex.android.library.compose" }
 
