--- a/content-provider-sample/app-tracer/src/main/AndroidManifest.xml
+++ b/content-provider-sample/app-tracer/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <provider
+            android:name="com.onestorecorp.android.tracer.provider.ConfigurationProvider"
+            android:authorities="com.onestorecorp.android.cp_tracer.provider"
+            android:exported="true"
+            android:enabled="true" />
     </application>
 
 </manifest>
