--- a/kmm-wepray/gradle/libs.versions.toml
+++ b/kmm-wepray/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ junit = "4.13.2"
 kotlin = "2.2.21"
 kotlinx-coroutines = "1.10.2"
 kotlinx-serialization = "1.9.0"
+koin = "4.2.0-beta2"
 uiGraphicsAndroid = "1.10.0"
 
 [libraries]
@@ -19,6 +20,8 @@ androidx-lifecycle-viewmodel-nav3 = { module = "org.jetbrains.androidx.lifecycle
 
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 kotlinx-coroutinesSwing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
+
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 
 compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "composeMultiplatform" }
 compose-foundation = { module = "org.jetbrains.compose.foundation:foundation", version.ref = "composeMultiplatform" }
